# anki-sync

./: .gitignore  README.md  pyproject.toml  test.py  verbs.csv  words.csv
anki_sync/: cli.py  config.py
anki_sync/core/: anki.py  audio_synthesizer.py  conjugation.py  gemini_client.py  gsheets.py  models.py  sql.py  stats.py  synthesize_audio.py  verb_processor.py  word_processor.py
anki_sync/core/auth/: auth.py
anki_sync/core/models/: __init__.py  adjective.py  adverb.py  audio.py  base.py  conjunction.py  constants.py  deck.py  genanki.py  note.py  noun.py  preposition.py  simple_word.py  verb.py  word.py
anki_sync/core/models/constants/: __init__.py  enums.py  fields.py  models.py  styles.py  templates.py
anki_sync/core/models/genanki/: __init__.py  card.py  deck.py  note.py  rev.py
anki_sync/core/synthesizers/: audio_synthesizer.py  base.py  elevenlabs.py  google.py
anki_sync/utils/: guid.py  html.py  sql.py
data/: adjectives.csv  nouns.csv  verbs conjugated.csv  verbs.csv
exp/: 0  collection.anki2  collection.anki21b  media
scratch/: temp
scripts/: Adjectives.csv  Nouns.csv  Verbs Conjugated.csv  Verbs.csv  lint.bash  process.py
tests/core/: sql_test.py
tests/core/models/: test_word.py
