[tool.poetry]
name = "anki-sync"
version = "0.1.0"
description = "Syncs words from Google Sheets to Anki notes."
authors = ["Your Name <you@example.com>"] # Please update with your details!
readme = "README.md"
packages = [{include = "anki_sync"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0"
genanki = "^0.13.0"
google-api-python-client = "^2.0"
google-auth-httplib2 = "^0.1"
google-auth-oauthlib = "^0.5"
google-cloud-texttospeech = "^2.27.0"
pydantic = "^2.0"
elevenlabs = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
mypy = "^1.0"
ruff = "^0.1.0"

[tool.poetry.scripts]
anki-sync = "anki_sync.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
